proj2/edu/purdue/cs352/minijava/parser/Parser.java
/* Parser.java */
/* Generated By:JavaCC: Do not edit this line. Parser.java */
    package edu.purdue.cs352.minijava.parser;

    import edu.purdue.cs352.minijava.ast.*;
    import edu.purdue.cs352.minijava.ASTToSExp;
    import java.util.*;

    public class Parser implements ParserConstants {
        public static void main(String[] args)
        {
            Parser parser;

            if (args.length != 1)
            {
                System.out.println("Use: mjparse <input file>");
                return;
            }

            try
            {
                parser = new Parser(new java.io.FileInputStream(args[0]));
            }
            catch (java.io.FileNotFoundException ex)
            {
                System.out.println("File " + args[0] + " not found.");
                return;
            }

            try
            {
                ASTToSExp astPrint = new ASTToSExp();
                astPrint.defaultVisit(parser.Program());
            }
            catch (ParseException ex)
            {
                System.out.println(ex.getMessage());
                return;
            }
        }

/* The following is a simple grammar that will allow you to test the generated
 * lexer. */
  final public List<Token> TokenList() throws ParseException {Token t;
    List<Token> tl = new ArrayList<Token>();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:
      case KW_PUBLIC:
      case KW_STATIC:
      case KW_VOID:
      case KW_MAIN:
      case KW_STRING:
      case KW_EXTENDS:
      case KW_RETURN:
      case KW_INT:
      case KW_BOOLEAN:
      case KW_IF:
      case KW_ELSE:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_RBRACE:
      case SYM_LPAREN:
      case SYM_RPAREN:
      case SYM_LBRACKET:
      case SYM_RBRACKET:
      case SYM_SEMICOLON:
      case SYM_EQUAL:
      case SYM_AND:
      case SYM_OR:
      case SYM_LESS:
      case SYM_LESS_EQUAL:
      case SYM_EQUALS:
      case SYM_NOT_EQUALS:
      case SYM_GREATER:
      case SYM_GREATER_EQUALS:
      case SYM_PLUS:
      case SYM_MINUS:
      case SYM_MULTIPLY:
      case SYM_DIVIDE:
      case SYM_MOD:
      case SYM_NOT:
      case SYM_DOT:
      case SYM_COMMA:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      t = Token();
tl.add(t);
    }
    jj_consume_token(0);
{if ("" != null) return tl;}
    throw new Error("Missing return statement in function");
  }

  final public Token Token() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFIER:{
      jj_consume_token(IDENTIFIER);
      break;
      }
    case INT_LITERAL:{
      jj_consume_token(INT_LITERAL);
      break;
      }
    case KW_CLASS:{
      jj_consume_token(KW_CLASS);
      break;
      }
    case KW_PUBLIC:{
      jj_consume_token(KW_PUBLIC);
      break;
      }
    case KW_STATIC:{
      jj_consume_token(KW_STATIC);
      break;
      }
    case KW_VOID:{
      jj_consume_token(KW_VOID);
      break;
      }
    case KW_MAIN:{
      jj_consume_token(KW_MAIN);
      break;
      }
    case KW_STRING:{
      jj_consume_token(KW_STRING);
      break;
      }
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      break;
      }
    case KW_RETURN:{
      jj_consume_token(KW_RETURN);
      break;
      }
    case KW_INT:{
      jj_consume_token(KW_INT);
      break;
      }
    case KW_BOOLEAN:{
      jj_consume_token(KW_BOOLEAN);
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      break;
      }
    case KW_ELSE:{
      jj_consume_token(KW_ELSE);
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      break;
      }
    case KW_TRUE:{
      jj_consume_token(KW_TRUE);
      break;
      }
    case KW_FALSE:{
      jj_consume_token(KW_FALSE);
      break;
      }
    case KW_THIS:{
      jj_consume_token(KW_THIS);
      break;
      }
    case KW_NEW:{
      jj_consume_token(KW_NEW);
      break;
      }
    case KW_PRINT:{
      jj_consume_token(KW_PRINT);
      break;
      }
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      break;
      }
    case SYM_RBRACE:{
      jj_consume_token(SYM_RBRACE);
      break;
      }
    case SYM_LPAREN:{
      jj_consume_token(SYM_LPAREN);
      break;
      }
    case SYM_RPAREN:{
      jj_consume_token(SYM_RPAREN);
      break;
      }
    case SYM_LBRACKET:{
      jj_consume_token(SYM_LBRACKET);
      break;
      }
    case SYM_RBRACKET:{
      jj_consume_token(SYM_RBRACKET);
      break;
      }
    case SYM_SEMICOLON:{
      jj_consume_token(SYM_SEMICOLON);
      break;
      }
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      break;
      }
    case SYM_AND:{
      jj_consume_token(SYM_AND);
      break;
      }
    case SYM_OR:{
      jj_consume_token(SYM_OR);
      break;
      }
    case SYM_LESS:{
      jj_consume_token(SYM_LESS);
      break;
      }
    case SYM_LESS_EQUAL:{
      jj_consume_token(SYM_LESS_EQUAL);
      break;
      }
    case SYM_EQUALS:{
      jj_consume_token(SYM_EQUALS);
      break;
      }
    case SYM_NOT_EQUALS:{
      jj_consume_token(SYM_NOT_EQUALS);
      break;
      }
    case SYM_GREATER:{
      jj_consume_token(SYM_GREATER);
      break;
      }
    case SYM_GREATER_EQUALS:{
      jj_consume_token(SYM_GREATER_EQUALS);
      break;
      }
    case SYM_PLUS:{
      jj_consume_token(SYM_PLUS);
      break;
      }
    case SYM_MINUS:{
      jj_consume_token(SYM_MINUS);
      break;
      }
    case SYM_MULTIPLY:{
      jj_consume_token(SYM_MULTIPLY);
      break;
      }
    case SYM_DIVIDE:{
      jj_consume_token(SYM_DIVIDE);
      break;
      }
    case SYM_MOD:{
      jj_consume_token(SYM_MOD);
      break;
      }
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      break;
      }
    case SYM_DOT:{
      jj_consume_token(SYM_DOT);
      break;
      }
    case SYM_COMMA:{
      jj_consume_token(SYM_COMMA);
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return token;}
    throw new Error("Missing return statement in function");
  }

// Grammar
  final public Program Program() throws ParseException {Token t = new Token();
    Main main;
    ArrayList<ClassDecl> classes = new ArrayList<ClassDecl>();
    ClassDecl newClass;
    main = MainClass();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_CLASS:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      newClass = ClassDeclaration();
classes.add(newClass);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(t, main, classes);}
    throw new Error("Missing return statement in function");
  }

  final public Main MainClass() throws ParseException {Token t = new Token();
    Statement statement;
    jj_consume_token(KW_CLASS);
    Identifier();
    jj_consume_token(SYM_LBRACE);
    jj_consume_token(KW_PUBLIC);
    jj_consume_token(KW_STATIC);
    jj_consume_token(KW_VOID);
    jj_consume_token(KW_MAIN);
    jj_consume_token(SYM_LPAREN);
    jj_consume_token(KW_STRING);
    jj_consume_token(SYM_LBRACKET);
    jj_consume_token(SYM_RBRACKET);
    Identifier();
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    statement = Statement();
    jj_consume_token(SYM_RBRACE);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new Main(t, statement);}
    throw new Error("Missing return statement in function");
  }

  final public ClassDecl ClassDeclaration() throws ParseException {Token t = new Token();
    String name;
    String eggstends = null;
    ArrayList<VarDecl> fields = new ArrayList<VarDecl>();
    ArrayList<MethodDecl> methods = new ArrayList<MethodDecl>();

    VarDecl newVar;
    MethodDecl newMethod;
    jj_consume_token(KW_CLASS);
    name = Identifier();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_EXTENDS:{
      jj_consume_token(KW_EXTENDS);
      eggstends = Identifier();
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      ;
    }
    jj_consume_token(SYM_LBRACE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_INT:
      case KW_BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      newVar = VarDeclaration();
fields.add(newVar);
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_4;
      }
      newMethod = MethodDeclaration();
methods.add(newMethod);
    }
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new ClassDecl(t, name, eggstends, fields, methods);}
    throw new Error("Missing return statement in function");
  }

  final public VarDecl VarDeclaration() throws ParseException {Token t = new Token();
    Type type;
    String name;
    type = Type();
    name = Identifier();
    jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return new VarDecl(t, type, name);}
    throw new Error("Missing return statement in function");
  }

  final public MethodDecl MethodDeclaration() throws ParseException {Token t = new Token();
    Type retType;
    String name;
    List<Parameter> parameters = new ArrayList<Parameter>();
    List<VarDecl> vds = new ArrayList<VarDecl>();
    List<Statement> body = new ArrayList<Statement>();
    Exp retExp;

    Type paramType;
    String paramName;
    VarDecl newVar;
    Statement newStatement;
    jj_consume_token(KW_PUBLIC);
    retType = Type();
    name = Identifier();
    jj_consume_token(SYM_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case KW_INT:
    case KW_BOOLEAN:
    case IDENTIFIER:{
      paramType = Type();
      paramName = Identifier();
parameters.add(new Parameter(new Token(), paramType, paramName));
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SYM_COMMA:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        jj_consume_token(SYM_COMMA);
        paramType = Type();
        paramName = Identifier();
parameters.add(new Parameter(new Token(), paramType, paramName));
      }
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      ;
    }
    jj_consume_token(SYM_RPAREN);
    jj_consume_token(SYM_LBRACE);
    label_6:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_6;
      }
      newVar = VarDeclaration();
vds.add(newVar);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_IF:
      case KW_WHILE:
      case KW_TRUE:
      case KW_FALSE:
      case KW_THIS:
      case KW_NEW:
      case KW_PRINT:
      case SYM_LBRACE:
      case SYM_LPAREN:
      case SYM_NOT:
      case IDENTIFIER:
      case INT_LITERAL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_7;
      }
      newStatement = Statement();
body.add(newStatement);
    }
    jj_consume_token(KW_RETURN);
    retExp = Expression();
    jj_consume_token(SYM_SEMICOLON);
    jj_consume_token(SYM_RBRACE);
{if ("" != null) return new MethodDecl(t, retType, name, parameters, vds, body, retExp);}
    throw new Error("Missing return statement in function");
  }

  final public Type Type() throws ParseException {Token t = new Token();
    String name;
    if (jj_2_2(2)) {
      jj_consume_token(KW_INT);
      jj_consume_token(SYM_LBRACKET);
      jj_consume_token(SYM_RBRACKET);
{if ("" != null) return new TypeIntArray(t);}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case KW_BOOLEAN:{
        jj_consume_token(KW_BOOLEAN);
{if ("" != null) return new TypeBoolean(t);}
        break;
        }
      case KW_INT:{
        jj_consume_token(KW_INT);
{if ("" != null) return new TypeInt(t);}
        break;
        }
      case IDENTIFIER:{
        name = Identifier();
{if ("" != null) return new Type(t, name);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement Statement() throws ParseException {Token t = new Token();
    Exp condition, value, exp;
    ArrayList<Statement> blockBody = new ArrayList<Statement>();
    Statement body;
    Statement ifPart, elsePart = null;

    Statement newStatement;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_LBRACE:{
      jj_consume_token(SYM_LBRACE);
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case KW_IF:
        case KW_WHILE:
        case KW_TRUE:
        case KW_FALSE:
        case KW_THIS:
        case KW_NEW:
        case KW_PRINT:
        case SYM_LBRACE:
        case SYM_LPAREN:
        case SYM_NOT:
        case IDENTIFIER:
        case INT_LITERAL:{
          ;
          break;
          }
        default:
          jj_la1[10] = jj_gen;
          break label_8;
        }
        newStatement = Statement();
blockBody.add(newStatement);
      }
      jj_consume_token(SYM_RBRACE);
{if ("" != null) return new BlockStatement(t, blockBody);}
      break;
      }
    case KW_IF:{
      jj_consume_token(KW_IF);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      ifPart = Statement();
      if (jj_2_3(2)) {
        jj_consume_token(KW_ELSE);
        elsePart = Statement();
      } else {
        ;
      }
{if ("" != null) return new IfStatement(t, condition, ifPart, elsePart);}
      break;
      }
    case KW_WHILE:{
      jj_consume_token(KW_WHILE);
      jj_consume_token(SYM_LPAREN);
      condition = Expression();
      jj_consume_token(SYM_RPAREN);
      body = Statement();
{if ("" != null) return new WhileStatement(t, condition, body);}
      break;
      }
    case KW_PRINT:{
      jj_consume_token(KW_PRINT);
      jj_consume_token(SYM_LPAREN);
      value = Expression();
      jj_consume_token(SYM_RPAREN);
      jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return new PrintStatement(t, value);}
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case SYM_NOT:
    case IDENTIFIER:
    case INT_LITERAL:{
      exp = Expression();
      jj_consume_token(SYM_SEMICOLON);
{if ("" != null) return new ExpStatement(t, exp);}
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp Expression() throws ParseException {Token t = new Token();
    AssignExpr();
{if ("" != null) return new Exp(t);}
    throw new Error("Missing return statement in function");
  }

  final public Exp AssignExpr() throws ParseException {Token t = new Token();
    Exp target, value = null;
    target = LogicOp();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_EQUAL:{
      jj_consume_token(SYM_EQUAL);
      value = AssignExpr();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      ;
    }
if(value != null)
            {if ("" != null) return new AssignExp(t, target, value);}
        else
            {if ("" != null) return new Exp(t);}
    throw new Error("Missing return statement in function");
  }

  final public Exp LogicOp() throws ParseException {Token op = new Token();
    Exp left, right = null;
    left = CmpOp();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:
      case SYM_OR:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_AND:{
        op = jj_consume_token(SYM_AND);
        break;
        }
      case SYM_OR:{
        op = jj_consume_token(SYM_OR);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = CmpOp();
{if ("" != null) return new BinaryExp(left, op, right);}
left = right;
    }
if(right == null)
            {if ("" != null) return new Exp(op);}
    throw new Error("Missing return statement in function");
  }

  final public Exp CmpOp() throws ParseException {Token op = new Token();
    Exp left, right = null;
    left = AddOp();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:
      case SYM_LESS_EQUAL:
      case SYM_EQUALS:
      case SYM_NOT_EQUALS:
      case SYM_GREATER:
      case SYM_GREATER_EQUALS:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LESS:{
        op = jj_consume_token(SYM_LESS);
        break;
        }
      case SYM_LESS_EQUAL:{
        op = jj_consume_token(SYM_LESS_EQUAL);
        break;
        }
      case SYM_EQUALS:{
        op = jj_consume_token(SYM_EQUALS);
        break;
        }
      case SYM_NOT_EQUALS:{
        op = jj_consume_token(SYM_NOT_EQUALS);
        break;
        }
      case SYM_GREATER:{
        op = jj_consume_token(SYM_GREATER);
        break;
        }
      case SYM_GREATER_EQUALS:{
        op = jj_consume_token(SYM_GREATER_EQUALS);
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = AddOp();
{if ("" != null) return new BinaryExp(left, op, right);}
left = right;
    }
if(right == null)
            {if ("" != null) return new Exp(op);}
    throw new Error("Missing return statement in function");
  }

  final public Exp AddOp() throws ParseException {Token op = new Token();
    Exp left, right = null;
    left = MulOp();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:
      case SYM_MINUS:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_PLUS:{
        op = jj_consume_token(SYM_PLUS);
        break;
        }
      case SYM_MINUS:{
        op = jj_consume_token(SYM_MINUS);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = MulOp();
{if ("" != null) return new BinaryExp(left, op, right);}
left = right;
    }
if(right == null)
            {if ("" != null) return new Exp(op);}
    throw new Error("Missing return statement in function");
  }

  final public Exp MulOp() throws ParseException {Token op = new Token();
    Exp left, right = null;
    left = UnaryOp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIPLY:
      case SYM_DIVIDE:
      case SYM_MOD:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_MULTIPLY:{
        op = jj_consume_token(SYM_MULTIPLY);
        break;
        }
      case SYM_DIVIDE:{
        op = jj_consume_token(SYM_DIVIDE);
        break;
        }
      case SYM_MOD:{
        op = jj_consume_token(SYM_MOD);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      right = UnaryOp();
{if ("" != null) return new BinaryExp(left, op, right);}
left = right;
    }
if(right == null)
            {if ("" != null) return new Exp(op);}
    throw new Error("Missing return statement in function");
  }

  final public Exp UnaryOp() throws ParseException {Token t = new Token();
    Exp sub;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SYM_NOT:{
      jj_consume_token(SYM_NOT);
      sub = UnaryOp();
{if ("" != null) return new NotExp(t, sub);}
      break;
      }
    case KW_TRUE:
    case KW_FALSE:
    case KW_THIS:
    case KW_NEW:
    case SYM_LPAREN:
    case IDENTIFIER:
    case INT_LITERAL:{
      PostfixOp();
{if ("" != null) return new Exp(t);}
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Exp PostfixOp() throws ParseException {Token t = new Token();
    Exp target, index = null;
    String member = null, method = null;

    ArrayList<Exp> arguments = new ArrayList<Exp>();
    Exp newArgument = null;
    target = PrimaryExp();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:
      case SYM_DOT:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_13;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SYM_LBRACKET:{
        jj_consume_token(SYM_LBRACKET);
        index = Expression();
        jj_consume_token(SYM_RBRACKET);
{if ("" != null) return new IndexExp(t, target, index);}
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        if (jj_2_4(3)) {
          jj_consume_token(SYM_DOT);
          method = Identifier();
          jj_consume_token(SYM_LPAREN);
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case KW_TRUE:
          case KW_FALSE:
          case KW_THIS:
          case KW_NEW:
          case SYM_LPAREN:
          case SYM_NOT:
          case IDENTIFIER:
          case INT_LITERAL:{
            newArgument = Expression();
arguments.add(newArgument);
            label_14:
            while (true) {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case SYM_COMMA:{
                ;
                break;
                }
              default:
                jj_la1[23] = jj_gen;
                break label_14;
              }
              jj_consume_token(SYM_COMMA);
              newArgument = Expression();
arguments.add(newArgument);
            }
            break;
            }
          default:
            jj_la1[24] = jj_gen;
            ;
          }
          jj_consume_token(SYM_RPAREN);
{if ("" != null) return new CallExp(t, target, method, arguments);}
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case SYM_DOT:{
            jj_consume_token(SYM_DOT);
            member = Identifier();
{if ("" != null) return new MemberExp(t, target, member.toString());}
            break;
            }
          default:
            jj_la1[26] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
// No pattern matches, just return Exp
        if(index == null && member == null && newArgument == null)
        {
            {if ("" != null) return new Exp(t);}
        }
    throw new Error("Missing return statement in function");
  }
